fix: font issues on mobile

--- a/client/src/components/forms/styles/StartMenu.module.css
+++ b/client/src/components/forms/styles/StartMenu.module.css
@@ -5,6 +5,7 @@ input:checked + .menu-label {
 }
 
 .main-heading {
+  display: flex;
   animation: fadeIn 0.5s ease-in forwards;
 }
 
